@@ -7,6 +7,9 @@
 * Users can now revert their vote if, for example, they accidentally clicked
   on the wrong link
 * Now keeping (and displaying) vote counts per quote
+* Radically changed order of top and bottom quotes, by introducing quote
+  scores: score = (positive votes + 1) / (negative votes + 1), as suggested by
+  sp3000 at irc.mozilla.org #bs on 2006-10-28
 * Added metadata-based logging, including search
 * Made rating and reporting links use POST instead of GET and added
   intermediate confirmation page for non-AJAX users
